--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "django-nutrition"
 version = "0.1"
 dependencies = [
     "django>=5.1",
+    "djangorestframework",
 ]
 description = "A Django app to track meals and calories."
 readme = "README.rst"
