--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "djangorestframework",
 ]
 description = "A Django app to track meals and calories."
-readme = "README.rst"
+readme = "README.md"
 requires-python = ">= 3.10"
 authors = [
     {name = "Erik Reid", email = "noreply@no.domain"},
